2004-06-16  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap4/camel-imap4-summary.c: Added a 'first' member to
	the imap_fetch_all_t struct so we can use that as a base offset in
	our GPtrArray, allowing us to limit resource consumption which
	could otherwise get quite large. Also added a ChangeInfo member
	that was needed for changes to untagged_fetch_all().
	(imap4_fetch_all_add): Use fetch->first as a base offset and change
	int i to guint32 i. Also updated to sue the fetch->changes.
	(imap4_fetch_all_update): Same.
	(untagged_fetch_all): Same - this is where it is really valuable,
	since we can avoid adding elements to the GPtrArray that we won't
	even use. Also needed to change code a big in case index <
	fetch->first (which could happen if a server notified us of a
	FLAGS change for a message we didn't request info about).
	(imap4_fetch_all_free): Free the ChangeInfo.
	(imap4_summary_fetch_all): Init fetch->changes and fetch->first.
	(imap4_summary_fetch_flags): Same.

2004-06-15  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-gpg-context.c (gpg_verify): Use
	camel_multipart_signed_get_content_stream() rather than getting
	the first part and canonicalising it ourselves. Fixes bug #60159.

	* providers/imap4/camel-imap4-stream.c (camel_imap4_stream_init):
	Init have_unget to FALSE. Don't set unget to NULL, it's no longer
	a pointer.
	(camel_imap4_stream_finalize): No need to g_free() unget anymore.
	(camel_imap4_stream_next_token): Check have_unget rather than
	unget != NULL. Set have_unget to FALSE if we get an unget'd token.
	(camel_imap4_stream_unget_token): Don't malloc space for an unget
	token. The unget token is no longer a pointer.

2004-06-14  Not Zed  <NotZed@Ximian.com>

	* providers/smtp/camel-smtp-transport.c (smtp_data): use
	g_ascii_strcasecmp.
	(smtp_connect): do not re-helo after we've authenticated.  This
	was a misreading of the spec.  We must only re-helo after a
	transport layer negotiation.
